<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mood_journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mood_journal"
        android:textColor="#0D0D0D"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/que_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/que_1"
        android:textColor="#090909"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_journal" />

    <ImageView
        android:id="@+id/imageView72"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/que_1"
        app:srcCompat="@drawable/background_white" />

    <ImageView
        android:id="@+id/imageView73"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/que_1"
        app:srcCompat="@drawable/background_white" />

    <ImageView
        android:id="@+id/imageView75"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView73"
        app:srcCompat="@drawable/background_white" />

    <ImageView
        android:id="@+id/imageView76"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView72"
        app:srcCompat="@drawable/background_white" />

    <ImageView
        android:id="@+id/imageView77"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView75"
        app:layout_constraintStart_toEndOf="@+id/imageView76"
        app:layout_constraintTop_toBottomOf="@+id/imageView74"
        app:srcCompat="@drawable/background_white" />

    <ImageView
        android:id="@+id/imageView74"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView73"
        app:layout_constraintStart_toEndOf="@+id/imageView72"
        app:layout_constraintTop_toBottomOf="@+id/que_1"
        app:srcCompat="@drawable/background_white" />

    <ImageView
        android:id="@+id/imageView78"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView72"
        app:layout_constraintEnd_toEndOf="@+id/imageView72"
        app:layout_constraintStart_toStartOf="@+id/imageView72"
        app:layout_constraintTop_toTopOf="@+id/imageView72"
        app:srcCompat="@drawable/happy_emoji" />

    <ImageView
        android:id="@+id/imageView79"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView74"
        app:layout_constraintEnd_toEndOf="@+id/imageView74"
        app:layout_constraintStart_toStartOf="@+id/imageView74"
        app:layout_constraintTop_toTopOf="@+id/imageView74"
        app:srcCompat="@drawable/cry_emoji" />

    <ImageView
        android:id="@+id/imageView80"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView73"
        app:layout_constraintEnd_toEndOf="@+id/imageView73"
        app:layout_constraintStart_toStartOf="@+id/imageView73"
        app:layout_constraintTop_toTopOf="@+id/imageView73"
        app:srcCompat="@drawable/party_emoji" />

    <ImageView
        android:id="@+id/imageView81"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView76"
        app:layout_constraintEnd_toEndOf="@+id/imageView76"
        app:layout_constraintStart_toStartOf="@+id/imageView76"
        app:layout_constraintTop_toTopOf="@+id/imageView76"
        app:srcCompat="@drawable/love_emoji" />

    <ImageView
        android:id="@+id/imageView82"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView77"
        app:layout_constraintEnd_toEndOf="@+id/imageView77"
        app:layout_constraintStart_toStartOf="@+id/imageView77"
        app:layout_constraintTop_toTopOf="@+id/imageView77"
        app:srcCompat="@drawable/laugh_emoji" />

    <ImageView
        android:id="@+id/imageView83"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView75"
        app:layout_constraintEnd_toEndOf="@+id/imageView75"
        app:layout_constraintStart_toStartOf="@+id/imageView75"
        app:layout_constraintTop_toTopOf="@+id/imageView75"
        app:srcCompat="@drawable/cool_emoji" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="237dp"
        android:layout_height="38dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView77" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="300dp"
        android:layout_marginBottom="80dp"
        android:background="@color/blueish_green"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/calendar" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:backgroundTint="@color/pink"
        android:text="@string/save_btn"
        android:textColor="#090909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

</androidx.constraintlayout.widget.ConstraintLayout>